--- a/Desktop/Finanzas/Style/estilos.css
+++ b/Desktop/Finanzas/Style/estilos.css
@@ -7,15 +7,16 @@
 
 #cuerpo {
 	position:relative;
-	width:800px;
+	width:750px;
 	margin: 0 auto;	
 }
 
 #entorno
 {
+
 	float: left;
-	height:700px;	
-	width:405px;	
+	height:600px;	
+	width:410px;	
 	overflow: scroll;	
 
 }
@@ -25,6 +26,26 @@
 
 	float: right;
 	width:300px;
+	height:350px;
+	margin: 0 auto;
+	margin-top: 20px;
+	border-radius: 30px;
+	background-image: -o-radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	background-image: -moz-radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	background-image: -webkit-radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	background-image: -ms-radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	background-image: radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	border: 1px solid #FFFFFF;
+	-moz-box-shadow:    2px 2px 4px 1px rgba(0,0,0,0.50);
+	-webkit-box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.50);
+	box-shadow:         2px 2px 4px 1px rgba(0,0,0,0.50);
+
+}
+
+#registros
+{
+
+	width:500px;
 	height:300px;
 	margin: 0 auto;
 	margin-top: 20px;
@@ -41,13 +62,49 @@
 
 }
 
+#ingreso
+
+{
+    
+	width:200px;
+	height:50px;
+    text-align:left;
+    -webkit-box-shadow: inset 2px 2px 2px 0px #dddddd;
+    -moz-box-shadow: inset 2px 2px 2px 0px #dddddd;
+    box-shadow: inset 2px 2px 2px 0px #dddddd;
+    background-color:white;
+    border: 1px solid #aaa;
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	font-size: 16px;
+	resize: none; 
+	
+}
+
+#montos
+
+{
+    
+	width:190px;
+	height:20px;
+    text-align:left;
+    -webkit-box-shadow: inset 2px 2px 2px 0px #dddddd;
+    -moz-box-shadow: inset 2px 2px 2px 0px #dddddd;
+    box-shadow: inset 2px 2px 2px 0px #dddddd;
+    background-color:white;
+    border: 1px solid #aaa;
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	font-size: 16px;
+	
+}
+
 .datos
 {
 	position:relative;
 	background-image:url('Images/Bordes.png');
 	height:30px;
-	width:486px;
+	width:400px;
 	margin: 0 auto;		
+	margin-top: 20px;	
 }
 
 .transacciones
@@ -98,13 +155,90 @@
 	right: 40px;	
 }
 
-.parrafo
+.parrafoB
 
 {
 
 	margin-top: 0px;
 	margin-bottom: 0px;	
 	text-align: center;
+	color: white;
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	
+}
+
+.parrafoN
+
+{
+
+	margin-top: 0px;
+	margin-bottom: 0px;	
+	text-align: center;
+	color: black;
+
+}
+
+.parrafoDiv
+
+{
+
+	margin-top: 0px;
+	margin-bottom: 0px;	
+	padding-top: 7px;
+	text-align: center;
+	color: black;
+	font-weight:bold;
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+
+}
+
+#caja0
+
+{
+
+	position:relative;
+	margin: 0 auto;
+	top:20px;
+	
+}
+
+#caja1
+
+{
+
+	position:relative;
+	width:360px;
+	margin: 0 auto;
+	top:50px;
+	
+}
+
+#caja2 
+
+{
+
+	position:relative;
+	width:400px;
+	margin: 0 auto;
+	top:80px;
+	
+}
+
+#flotadorI
+
+{
+
+	position: absolute;
+	float:left;
+	top:9px;
+
+}
+
+#flotadorD
+
+{
+
+	float:right;
 
 }
 
@@ -118,14 +252,22 @@
 
 }
 
-
-
 #sinMargen2
 
 {
 
 	position:relative;
 	top: 60px;
+	left: 70px;
+
+}
+
+#sinMargen3
+
+{
+
+	position:relative;
+	top: 80px;
 	left: 70px;
 
 }
@@ -150,12 +292,32 @@
 
 }
 
+.conMargenE
+
+{
+
+	position:relative;
+	top: 55px;
+	left: 100px;
+
+}
+
 .conMargen2
 
 {
 
 	position:relative;
 	top: 70px;
+	left: 90px;
+
+}
+
+.conMargen3
+
+{
+
+	position:relative;
+	top: 90px;
 	left: 90px;
 
 }
