--- a/Desktop/Finanzas/Style/estilos.css
+++ b/Desktop/Finanzas/Style/estilos.css
@@ -5,10 +5,13 @@
 
 }
 
-#cuerpo {
+#cuerpo 
+{
+
 	position:relative;
 	width:750px;
 	margin: 0 auto;	
+	
 }
 
 #entorno
@@ -46,7 +49,28 @@
 {
 
 	width:500px;
-	height:300px;
+	height:310px;
+	margin: 0 auto;
+	margin-top: 20px;
+	border-radius: 30px;
+	background-image: -o-radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	background-image: -moz-radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	background-image: -webkit-radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	background-image: -ms-radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	background-image: radial-gradient(-7% 73%, #C18545 8%, #AB7335 33%, #A86F32 36%, #A9723D 58%, #A97547 80%, #B48148 96%);
+	border: 1px solid #FFFFFF;
+	-moz-box-shadow:    2px 2px 4px 1px rgba(0,0,0,0.50);
+	-webkit-box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.50);
+	box-shadow:         2px 2px 4px 1px rgba(0,0,0,0.50);
+
+}
+
+#rubros
+
+{
+
+	width:500px;
+	height:110px;
 	margin: 0 auto;
 	margin-top: 20px;
 	border-radius: 30px;
@@ -63,11 +87,10 @@
 }
 
 #ingreso
-
 {
     
-	width:200px;
-	height:50px;
+	width:190px;
+	height:20px;
     text-align:left;
     -webkit-box-shadow: inset 2px 2px 2px 0px #dddddd;
     -moz-box-shadow: inset 2px 2px 2px 0px #dddddd;
@@ -76,7 +99,6 @@
     border: 1px solid #aaa;
 	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
 	font-size: 16px;
-	resize: none; 
 	
 }
 
@@ -84,7 +106,7 @@
 
 {
     
-	width:190px;
+	width:100px;
 	height:20px;
     text-align:left;
     -webkit-box-shadow: inset 2px 2px 2px 0px #dddddd;
@@ -112,7 +134,7 @@
 
 	position:relative;
 	width:400px;
-	height: 70px;
+	height:110px;
 	margin: 0 auto;
 	margin-top: 20px;
 	border-radius: 30px;
@@ -138,21 +160,24 @@
 {
 	position:absolute;
 	top: 30px;
-	left: 40px;	
+	left: 30px;
+	width:100px;
 }
 
 .detalle
 {
 	position:absolute;
 	top: 30px;
-	left: 180px;	
+	left: 160px;
+	width:100px;	
 }
 
 .monto
 {
 	position:absolute;
 	top: 30px;
-	right: 40px;	
+	right: 40px;
+	width:60px;	
 }
 
 .parrafoB
@@ -207,38 +232,60 @@
 {
 
 	position:relative;
+	margin: 0 auto;
+	top:20px;
+	
+}
+
+#caja2
+
+{
+
+	position:relative;
 	width:360px;
 	margin: 0 auto;
 	top:50px;
 	
 }
 
-#caja2 
+#caja3 
 
 {
 
 	position:relative;
 	width:400px;
 	margin: 0 auto;
-	top:80px;
+	top:68px;
 	
 }
 
-#flotadorI
+#caja4
+
+{
+
+	position:relative;
+	width:350px;
+	margin: 0 auto;
+	top:90px;
+	
+}
+
+.flotadorD
+
+{
+
+	float:right;
+
+}
+
+.flotadorI
 
 {
 
 	position: absolute;
 	float:left;
-	top:9px;
-
-}
-
-#flotadorD
-
-{
-
-	float:right;
+	top:-4px;
+	left:-12px;
 
 }
 
@@ -279,6 +326,42 @@
 	position:relative;
 	top: 90px;
 	left: 110px;
+
+}
+
+.subir2
+
+{
+
+	position:relative;
+	margin: 0 auto;	
+	top: 150px;
+	left: 207px;
+	background-color: #E3E1B8;
+	font-weight:bold;
+	font-size: 15px;
+	border-radius: 30px;	
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	border: 1px solid #FFFFFF;
+	-moz-box-shadow:    2px 2px 4px 1px rgba(0,0,0,0.50);
+	-webkit-box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.50);
+	box-shadow:         2px 2px 4px 1px rgba(0,0,0,0.50);	
+
+}
+
+.formas
+
+{
+
+	background-color: #E3E1B8;
+	font-weight:bold;
+	font-size: 12px;
+	border-radius: 30px;	
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	border: 1px solid #FFFFFF;
+	-moz-box-shadow:    2px 2px 4px 1px rgba(0,0,0,0.50);
+	-webkit-box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.50);
+	box-shadow:         2px 2px 4px 1px rgba(0,0,0,0.50);	
 
 }
 
