--- a/Desktop/Finanzas/Style/estilos.css
+++ b/Desktop/Finanzas/Style/estilos.css
@@ -70,7 +70,7 @@
 {
 
 	width:500px;
-	height:110px;
+	height:220px;
 	margin: 0 auto;
 	margin-top: 20px;
 	border-radius: 30px;
@@ -217,7 +217,7 @@
 
 }
 
-#caja0
+.caja0
 
 {
 
@@ -227,7 +227,7 @@
 	
 }
 
-#caja1
+.caja1
 
 {
 
@@ -237,7 +237,7 @@
 	
 }
 
-#caja2
+.caja2
 
 {
 
@@ -248,7 +248,7 @@
 	
 }
 
-#caja3 
+.caja3 
 
 {
 
@@ -259,7 +259,7 @@
 	
 }
 
-#caja4
+.caja4
 
 {
 
@@ -268,6 +268,33 @@
 	margin: 0 auto;
 	top:90px;
 	
+}
+
+#elMismo
+
+{
+
+	position:relative;
+	width:200px;
+	margin: 0 auto;
+	top:68px;
+
+}
+
+#debeDiv
+
+{
+
+	float:left;
+
+}
+
+#haberDiv
+
+{
+
+	float:right;
+
 }
 
 .flotadorD
@@ -336,6 +363,26 @@
 	position:relative;
 	margin: 0 auto;	
 	top: 150px;
+	left: 207px;
+	background-color: #E3E1B8;
+	font-weight:bold;
+	font-size: 15px;
+	border-radius: 30px;	
+	font-family: "Courier New", Courier, "Lucida Sans Typewriter", "Lucida Typewriter", monospace;
+	border: 1px solid #FFFFFF;
+	-moz-box-shadow:    2px 2px 4px 1px rgba(0,0,0,0.50);
+	-webkit-box-shadow: 2px 2px 4px 1px rgba(0,0,0,0.50);
+	box-shadow:         2px 2px 4px 1px rgba(0,0,0,0.50);	
+
+}
+
+.subir3
+
+{
+
+	position:relative;
+	margin: 0 auto;	
+	top: 90px;
 	left: 207px;
 	background-color: #E3E1B8;
 	font-weight:bold;
